--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div><img src="imagenes/logo.jpg"></div>
 	<ul>
     <li> <a href="index.html">Inicio</a></li>
-    <li><a href="paginas/cursosonline.html">Cursos Online</a>
+    <li><a href="Paginas/cursosonline.html">Cursos Online</a>
       <ul>
         <li><a href="https://www.udemy.com">Udemy</a></li>
         <li><a href="https://es.coursera.org">Coursera</a></li>
@@ -43,7 +43,7 @@
         <li><a href="https://aprendergratis.es/cursos-online/">AprendeGratis</a></li>
       </ul>
     </li>
-    <li><a href="paginas/tutorialesonline.html">Tutoriales Online</a>
+    <li><a href="Paginas/tutorialesonline.html">Tutoriales Online</a>
       <ul>
         <li><a href="https://www.youtube.com/teded/featured">TED-Ed</a></li>
         <li><a href="https://www.youtube.com/user/undostresingles">123 Ingles Academy</a></li>
@@ -52,7 +52,7 @@
         <li><a href="https://www.youtube.com/channel/UCFIHO5YHF4yHRXGozU0xL_Q">Oakademia - Academia Online y Clases Particulares</a></li>
       </ul>
     </li>
-    <li><a href="paginas/plataformasdeapoyo.html">Plataformas de Apoyo</a>
+    <li><a href="Paginas/plataformasdeapoyo.html">Plataformas de Apoyo</a>
       <ul>
         <li><a href="https://www.microsoft.com/es-mx/microsoft-teams/group-chat-software">Microsoft Teams</a></li>
         <li><a href="https://zoom.us/download">Zoom</a></li>
@@ -60,7 +60,7 @@
         <li><a href="https://www.webex.com/es/video-conferencing.html">webex</a></li>
       </ul>
     </li>
-    <li><a href="paginas/presentacionesonline.html">Presentaciones Online</a>
+    <li><a href="Paginas/presentacionesonline.html">Presentaciones Online</a>
       <ul>
         <li><a href="https://prezi.com">Prezi</a></li>
         <li><a href="https://www.visme.co/es/presentaciones-creativas/">Visme</a></li>
@@ -68,7 +68,7 @@
         <li><a href="https://genial.ly/es/">Genially</a></li>
       </ul>
     </li>
-    <li><a href="paginas/librosonline.html">Libros Online</a>
+    <li><a href="Paginas/librosonline.html">Libros Online</a>
       <ul>
       <li><a href="https://archive.org/index.php">Internet Archive</a></li>
       <li><a href="https://freeditorial.com">Freeditorial</a></li>
@@ -77,8 +77,8 @@
       <li><a href="https://ebiblioteca.org">Enlace de Bibliotecas Digitales</a></li>
     </ul>
   </li>
-  <li><a href="paginas/conocenos.html">Conocenos</a></li>
-  <li><a href="paginas/referencias.html">Referencias</a></li>
+  <li><a href="Paginas/conocenos.html">Conocenos</a></li>
+  <li><a href="Paginas/referencias.html">Referencias</a></li>
   </ul>
 </nav>
 
